SERVER-48102 Update heartbeat state on primary even if heartbeat response includes a new config